--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <nav>
-            <a href="">
-                <p lang="en">WebStudio</p>
+            <a href="" lang="en">
+                WebStudio
             </a>
             <ul>
                 <li>
@@ -24,8 +24,10 @@
                 </li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tell:+380961111111">+38 096 111 11 11</a>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </header>
     <main>
         <!-- Hero -->
@@ -33,42 +35,41 @@
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
+        <!-- Our mission -->
+        <section>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
         <!-- What we do -->
         <section>
-            <div>
-                <ul>
-                    <li>
-                        <p>Внимание к деталям</p>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                    </li>
-                    <li>
-                        <p>Пунктуальность</p>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                    </li>
-                    <li>
-                        <p>Планирование</p>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                    </li>
-                    <li>
-                        <p>Современные технологии</p>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <h2>Чем мы занимаемся</h2>
-                <ul>
-                    <li>
-                        <img src="./images/what-we-do/box1.png" alt="coding" width="370" height="294">
-                    </li>
-                    <li>
-                        <img src="./images/what-we-do/box2.png" alt="app interface" width="370" height="294">
-                    </li>
-                    <li>
-                        <img src="./images/what-we-do/box3.png" alt="colors on the tablet" width="370" height="294">
-                    </li>
-                </ul>
-            </div>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="./images/what-we-do/box1.jpg" alt="coding" width="370" height="294">
+                </li>
+                <li>
+                    <img src="./images/what-we-do/box2.jpg" alt="app interface" width="370" height="294">
+                </li>
+                <li>
+                    <img src="./images/what-we-do/box3.jpg" alt="colors on the tablet" width="370" height="294">
+                </li>
+            </ul>
         </section>
         <!-- Our team -->
         <section>
