--- a/index.html
+++ b/index.html
@@ -99,14 +99,12 @@
         </section>
     </main>
     <footer>
-        <a href="">
-            <p lang="en">WebStudio</p>
-        </a>
+        <a href="" lang="en">WebStudio</a>
         <address>
             <ul>
                 <li><a href="https://goo.gl/maps/2Wj12QhzYocX28hv6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tell:+380991111111">+38 099 111 11 11</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
